--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -41,14 +41,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: docker-build-push
     steps:
-      - run: |
-          git config --global user.email ci-bot@argocd.com && git config --global user.name ci-bot
-          echo "cloning app repo"
-          git clone https://oauth2:${{ secrets.GH_PAT }}@github.com/${{ github.repository_owner }}/argocd-course-webapp.git
-          cd argocd-course-webapp
-          echo "checkout source branch"
-          git checkout ${{ github.event.pull_request.head.ref }}
-          echo "updating image tag in values file"
+      -
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      -
+        name: Updating Docker image tag
+        run: |
           sed -i "s,tag:.*,tag:\ ${{ github.event.pull_request.head.sha }}," helm/webapp/values.yaml
           git add . && git commit -m "update image tag [skip ci]"
           git push
