--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -53,8 +53,9 @@ jobs:
         name: Commit and push changes
         uses: devops-infra/action-commit-push@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          commit_message: Updating Docker image tag
+          github_token: "${{ secrets.GITHUB_TOKEN }}"
+          commit_prefix: "[AUTO]"
+          commit_message: "Updating Docker image tag"
   add_labels:
     runs-on: ubuntu-latest
     needs: update-image-tag-in-helm
