--- a/helm/webapp/values.yaml
+++ b/helm/webapp/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: mabusaa/argocd-course-webapp
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "9dbc07045cd3502b9863803b21356cd5ec2a93eb"
+  tag: c6725489c035960245e32d4fe8e60ae4985f7c66
 
 imagePullSecrets: []
 nameOverride: ""
