--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -1,5 +1,6 @@
 # See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 # Some random comment
+# More random comments
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
