--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -56,6 +56,7 @@ jobs:
           github_token: "${{ secrets.GITHUB_TOKEN }}"
           commit_prefix: "[AUTO] "
           commit_message: "Updating Docker image tag"
+          target_branch: "${{ github.event.pull_request.head.ref }}"
   add_labels:
     runs-on: ubuntu-latest
     needs: update-image-tag-in-helm
