--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
           context: .
           file: WebApplication1/Dockerfile
           push: true
-          tags: mabusaa/argocd-course-webapp:${{ github.sha }}
+          tags: soyrodericus/argocd-course-webapp:${{ github.sha }}
   promote-to-dev-environment:
     runs-on: ubuntu-latest
     needs: docker-build-push
@@ -48,7 +48,7 @@ jobs:
           echo "promoting into dev environment!"
           git config --global user.email ci-bot@argocd.com && git config --global user.name ci-bot
           echo "cloning config repo $CONFIG_REPO_NAME"
-          git clone https://oauth2:${{ secrets.GH_PAT }}@github.com/${{ github.repository_owner }}/$CONFIG_REPO_NAME.git
+          git clone https://oauth2:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository_owner }}/$CONFIG_REPO_NAME.git
           cd $CONFIG_REPO_NAME
           echo "checkout main branch"
           git checkout main
